# OmnisPartner

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  bootstrap.py  db.py  factory.py  license.py  logging_config.py  main.py  settings.py  switches.py
app/api/: __init__.py  alertmanager.py  routes.py
app/modules/alertmanager/: __init__.py
app/modules/alertmanager/cache/: __init__.py  engine.py  loader.py  sample_data.py
app/modules/alertmanager/domain/: __init__.py  alert_item.py  alert_item_record.py  channel_provider.py  msg_channel.py  msg_send_event.py  msg_send_forbid_obj.py  msg_send_rules.py  resend_snapshot.py  sync_msg.py
app/modules/alertmanager/msgformat/: __init__.py  formatter.py
app/modules/alertmanager/provider/: __init__.py  aliyun_phone.py  base.py  dingtalk.py  email.py  registry.py  sms.py  wechat.py
app/modules/alertmanager/repositories/: __init__.py  base.py  memory.py  mysql.py
app/modules/alertmanager/service/: __init__.py  core.py  exceptions.py
app/modules/alertmanager/util/: __init__.py  constants.py  enums.py  utils.py
app/modules/deployfilemanage/: __init__.py
app/modules/deployfilemanage/controller/: router.py
app/modules/deployfilemanage/deploy/: __init__.py  invoker.py  jboss_cli.py  remote.py  (+2 more)
app/services/: __init__.py  after_server_start.py  alert_cache.py  base.py  cbh_report.py  db_event_operator.py  deploy.py  esb_agent.py  fine_report.py  recovery.py  sys_service.py
tests/: test_jboss_cli.py  test_jboss_replace_strategy.py  test_nexus_client.py  test_simple_properties_replace.py
(+19 files in other folders)
