[project]
name = "omnis-partner-fastapi"
version = "0.1.0"
description = "FastAPI port of the Omnis Partner service."
authors = [{ name = "Omnis Team" }]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.21.1",
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
    "aiosmtplib>=3.0.1",
    "pymysql>=1.1.0",
    "pydantic-settings>=2.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "httpx>=0.24"
]

[tool.uvicorn]
app = "app.main:app"
reload = true
